--- a/app/src/main/res/layout/activity_capture_image.xml
+++ b/app/src/main/res/layout/activity_capture_image.xml
@@ -4,18 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CaptureImageActivity">
+    tools:context=".CaptureImageActivity"
+    android:gravity="center">
 
     <TextureView
         android:id="@+id/texture_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/takeImage"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Take Picture"/>
+        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
+        android:layout_centerHorizontal="true"
+
+        />
 
 </RelativeLayout>
