--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="colorPrimaryDarkCUSTOM">#232F34</color>
     <color name="colorAccentCUSTOM">#F9AA33</color>
 
+    <color name="colorAccentCUSTOM1">#4CAF50</color>
+
     <color name="white">#FFFFFF</color>
 </resources>
