--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="@color/colorPrimaryDarkCUSTOM"
+    >
 
     <LinearLayout
         android:orientation="vertical"
@@ -14,35 +16,49 @@
         android:paddingRight="24dp">
 
         <!--Email -->
-        <EditText android:id="@+id/plain_text_input_email"
+        <EditText
+            android:id="@+id/plain_text_input_email"
+            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAccentCUSTOM"
+            android:hint="Email"
             android:inputType="textEmailAddress"
-            android:hint="Email" />
+            android:textColor="@color/white"
+            android:textColorHint="#63FFFFFF" />
 
         <!-- password -->
-        <EditText android:id="@+id/input_password"
+        <EditText
+            android:id="@+id/input_password"
+            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAccentCUSTOM"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:hint="Password"/>
+            android:textColor="@color/white"
+            android:textColorHint="#63FFFFFF" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimaryCUSTOM"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Login"/>
 
-        <TextView android:id="@+id/link_signup"
+        <TextView
+            android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:text="No account yet? Create one"
+            android:textColor="@color/white"
+            android:textSize="16dip" />
 
     </LinearLayout>
 </ScrollView>
