--- a/app/src/main/res/layout/activity_process_image.xml
+++ b/app/src/main/res/layout/activity_process_image.xml
@@ -433,12 +433,68 @@
                     android:layout_weight="0.25"
                     android:background="@color/white" />
             </TableRow>
+
+            <View
+                android:layout_height="15dip"
+                android:background="@color/colorAccentCUSTOM" />
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:paddingBottom="30dp">
+
+                <TextView
+                    android:id="@+id/txtContentCAL1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white" />
+
+                <View
+                    android:id="@+id/viewCAL1"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_weight="0.25"
+                    android:background="@color/white" />
+            </TableRow>
         </TableLayout>
 
         <ImageView
             android:id="@+id/imgview2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <View
+            android:id="@+id/viewBETWEENBITMAPS"
+            android:layout_width="match_parent"
+            android:layout_height="15dip"
+            android:background="@color/colorAccentCUSTOM"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/buttonSubmit"
+            android:visibility="gone"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/colorPrimaryCUSTOM"
+            android:text="Submit Analysis"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/buttonOPENCVANALYSIS"
+            android:visibility="gone"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/colorPrimaryCUSTOM"
+            android:text="OpenCV Analysis"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
