--- a/app/src/main/res/layout/fragment_yourdata.xml
+++ b/app/src/main/res/layout/fragment_yourdata.xml
@@ -33,7 +33,7 @@
 
                     <TextView
                         android:fontFamily="sans-serif-thin"
-                        android:padding="3dip"
+                        android:paddingBottom="3dip"
                         android:text="View and edit your personal details here"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textColor="@color/white"
@@ -53,6 +53,7 @@
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/registeredTV"
                         android:fontFamily="sans-serif"
                         android:padding="3dip"
                         android:text="Registered Dressings"
@@ -65,7 +66,7 @@
 
                     <TextView
                         android:fontFamily="sans-serif-thin"
-                        android:padding="3dip"
+                        android:paddingBottom="3dip"
                         android:text="View and edit your registered dressings here"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textColor="@color/white"
@@ -83,6 +84,7 @@
             <TableRow>
 
                 <TextView
+                    android:id="@+id/historyTV"
                     android:padding="3dip"
                     android:text="History"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -94,8 +96,8 @@
 
                 <TextView
                     android:fontFamily="sans-serif-thin"
-                    android:padding="3dip"
-                    android:text="View you wound monitoring history here"
+                    android:paddingBottom="3dip"
+                    android:text="View your wound monitoring history here"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
@@ -111,6 +113,7 @@
             <TableRow>
 
                 <TextView
+                    android:id="@+id/reminders"
                     android:padding="3dip"
                     android:text="Reminders"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -122,36 +125,8 @@
 
                 <TextView
                     android:fontFamily="sans-serif-thin"
-                    android:padding="2dip"
+                    android:paddingBottom="2dip"
                     android:text="View and set daily reminders here"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
-            </TableRow>
-        </TableLayout>
-
-        <View
-            android:layout_height="1dip"
-            android:background="@color/colorAccentCUSTOM" />
-
-        <TableLayout android:id="@+id/tableLayout2">
-
-            <TableRow>
-
-                <TextView
-                    android:padding="5dip"
-                    android:text="Settings"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
-            </TableRow>
-
-            <TableRow>
-
-                <TextView
-                    android:fontFamily="sans-serif-thin"
-                    android:padding="2dip"
-                    android:text="View and edit your application's settings here"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
@@ -181,6 +156,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="5dp"/>
 
 </android.support.constraint.ConstraintLayout>
